--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
             <div>
                 <img src="images/Logo.png" alt="">
             </div>
-            <button class="btn btn-active lg:text-xl">Sort by View</button>
-            <button class="btn btn-error text-white bg-[#FF1F3D] lg:text-xl">Blog</button>
+            <button id="sort-btn" onclick="sortData(this)" class="btn btn-active lg:text-xl">Sort by View</button>
+            <button class="btn btn-active hover:text-white hover:bg-[#FF1F3D] lg:text-xl"><a href="blog.html" target="_blank">Blog</a></button>
         </nav>
         <hr>
     </header>
 
     <main>
         <div class="flex justify-center items-center gap-8 my-8">
-            <button onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl">All</button>
-            <button onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl">Music</button>
-            <button onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl">Comedy</button>
-            <button onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl">Drawing</button>
+            <button id="default-all" onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl clicky-btn">All</button>
+            <button onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl clicky-btn">Music</button>
+            <button onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl clicky-btn">Comedy</button>
+            <button onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl clicky-btn">Drawing</button>
         </div>
     </main>
 
