--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="images/Logo.png" alt="">
             </div>
             <button id="sort-btn" onclick="sortData(this)" class="btn btn-active lg:text-xl">Sort by View</button>
-            <button class="btn btn-active hover:text-white hover:bg-[#FF1F3D] lg:text-xl"><a href="blog.html" target="_blank">Blog</a></button>
+            <button class="btn btn-active text-white hover:text-black hover:bg-[#FF1F3D] bg-[#FF1F3D] lg:text-xl"><a href="blog.html" target="_blank">Blog</a></button>
         </nav>
         <hr>
     </header>
