--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <div>
                 <img src="images/Logo.png" alt="">
             </div>
-            <button id="sort-btn" onclick="sortData(this)" class="btn btn-active lg:text-xl">Sort by View</button>
-            <a href="blog.html" class="btn btn-active text-white hover:text-black hover:bg-[#FF1F3D] bg-[#FF1F3D] lg:text-xl" target="_blank">Blog</a>
+            <button id="sort-btn" onclick="sortData(this)" class="btn btn-active text-sm lg:text-xl">Sort by View</button>
+            <a href="blog.html" class="btn btn-active text-white hover:text-black hover:bg-[#FF1F3D] bg-[#FF1F3D] text-sm lg:text-xl" target="_blank">Blog</a>
         </nav>
         <hr>
     </header>
 
     <main>
-        <div class="flex justify-center items-center gap-8 my-8">
+        <div class="flex justify-center items-center gap-4 lg:gap-8 my-8">
             <button id="default-all" onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl clicky-btn">All</button>
             <button onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl clicky-btn">Music</button>
             <button onclick="loadData(this)" class="btn btn-active lg:px-6 lg:text-xl clicky-btn">Comedy</button>
